--- a/junit-5/android/pom.xml
+++ b/junit-5/android/pom.xml
@@ -14,6 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <surefire.version>3.0.0-M5</surefire.version>
         <config.file>com/browserstack/FirstTest.java</config.file>
+        <confif.file>browserstack.yml</confif.file>
     </properties>
 
     <dependencies>
