--- a/junit-5/android/browserstack.yml
+++ b/junit-5/android/browserstack.yml
@@ -3,8 +3,8 @@
 # =============================
 # Add your BrowserStack userName and acccessKey here or set BROWSERSTACK_USERNAME and
 # BROWSERSTACK_ACCESS_KEY as env variables
-userName: nithyamani3
-accessKey: sVGjG5FRHgHdDAQvLjJx
+userName: BROWSERSTACK_USERNAME
+accessKey: BROWSERSTACK_ACCESS_KEY
 
 # ======================
 # BrowserStack Reporting
